--- a/settings/external/com.katalon.katalon-studio-slack-plugin.properties
+++ b/settings/external/com.katalon.katalon-studio-slack-plugin.properties
@@ -1,4 +1,4 @@
 #
 isSlackEnabled=true
-authentication.token="xoxb-198924355888-7421878419958-CNguyfdvWea4ncOnEB5xpjZk"
-authentication.channel="\#katalon-result"
+authentication.token=""
+authentication.channel=""
