add slack integration in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ build
 .classpath
 
 .project
+
+settings/external/com.katalon.katalon-studio-slack-plugin.properties
+settings/external/com.katalon.katalon-studio-slack-plugin.properties
