add gitignore properties

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ build
 
 settings/external/com.katalon.katalon-studio-slack-plugin.properties
 settings/external/com.katalon.katalon-studio-slack-plugin.properties
+settings/external/*.properties
