--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ build
 
 settings/external/com.katalon.katalon-studio-slack-plugin.properties
 settings/external/*.properties
+
+Profiles/default.glbl
